...
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_professor_progress_fragment">ProfessorProgressFragment</string>


    <string name="user_id">User Id</string>
    <string name="full_name">Full Name</string>
    <string name="user_type">User Type</string>
    <string name="password">Password</string>
    <string name="security_answer">Security Answer</string>
    <string name="course_full_name">Current Course Full Name</string>
    <string name="course_id">Current Course Id</string>
    <string name="end_session">End Session</string>
    <string name="start_session">Start Session</string>
    <string name="delete_session">Delete Session</string>
    <string name="session_id">Current Session Id</string>
    <string name="application_name">Eureka</string>
    <string name="session_name">Current Session Name</string>
    <string name="quiz_name">Quiz Name</string>

</resources>

